# libglScreenshotHelper

./: CMakeLists.txt  I_TALS.d  Makefile  README.md  main  main.d  myapp
glad/include/glad/: egl.h  gl.h  gles2.h  glx.h  wgl.h
glad/src/: egl.c  gl.c
include/: glScreenshotHelper.h
libglScreenshotHelper/: CMakeLists.txt
libglScreenshotHelper/include/: glScreenshotHelper.h
libglScreenshotHelper/src/: glScreenshotHelper.cpp  main.cpp
libglScreenshotHelper/test/: glScreenshotHelperTest.cpp
libglScreenshotHelperTests/: CMakeLists.txt  glScreenshotHelperTest.cpp  glScreenshotHelperTest.h  main.cpp
src/: I_TALS  I_TALS.cpp  I_TALS.h  I_TALS.hpp  glScreenshotHelper.cpp  main  main.cpp
test/: glScreenshotHelperTest.cpp  glScreenshotHelperTest.h
tests/: CMakeLists.txt  glScreenshotHelperTest.cpp  glScreenshotHelperTest.h  testCreateFileName.cpp  testCreateFileName.h  testFindCatalogUsbName.cpp  testFindCatalogUsbName.h  testMain.cpp  testTakeAndLoadScreenshot.cpp  testTakeAndLoadScreenshot.h
